feat: add links

--- a/index.html
+++ b/index.html
@@ -11,13 +11,61 @@
   <body>
     <main>
       <header>
-        <img src="./assets/img/profile.jpg" alt="Niag Alves" />
+        <img src="./assets/img/profile/profile.jpg" alt="Niag Alves" />
         <h1>@niagalves</h1>
         <p>
           Aqui você irá encontrar o link de todas as redes sociais no qual faço
           parte e uso com frequência.
         </p>
       </header>
+      <section>
+        <ul>
+          <li>
+            <a href="https://www.instagram.com/niagalves/" title="Instagram">
+              <img
+                src="./assets/img/icons/instagram.svg"
+                width="21"
+                height="21"
+                alt="Instagram icon"
+              />
+              Instagram
+            </a>
+          </li>
+          <li>
+            <a href="https://twitter.com/niagalves" title="Twitter">
+              <img
+                src="./assets/img/icons/twitter.svg"
+                width="21"
+                height="21"
+                alt="Twitter icon"
+              />
+              Twitter
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/niagalves/" title="LinkedIn">
+              <img
+                src="./assets/img/icons/linkedin.svg"
+                width="21"
+                height="21"
+                alt="Linkedin icon"
+              />
+              Linkedin
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/niagalves" title="Github">
+              <img
+                src="./assets/img/icons/github.svg"
+                width="21"
+                height="21"
+                alt="Github icon"
+              />
+              Github</a
+            >
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
