feat: add meta tags

--- a/index.html
+++ b/index.html
@@ -4,9 +4,56 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <meta
+      name="description"
+      content="Aqui você encontrará links de todas as redes sociais no qual faço parte e uso com frequência."
+    />
+    <meta name="author" content="@niagalves" />
+    <meta name="robots" content="index, follow" />
 
-    <title>My links</title>
+    <meta property="og:title" content="Meus links | Niag Alves" />
+    <meta
+      property="og:description"
+      content="Aqui você encontrará links de todas as redes sociais no qual faço parte e uso com frequência."
+    />
+    <meta property="og:url" content="/" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:site_name" content="Meus links | Niag Alves" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="./assets/img/metatag/metatag.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="495" />
+    <meta property="og:image:height" content="222" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image" content="./assets/img/metatag/metatag.png" />
+    <meta name="twitter:site" content="@niagalves" />
+    <meta name="twitter:title" content="Meus links | Niag Alves" />
+    <meta
+      name="twitter:description"
+      content="Aqui você encontrará links de todas as redes sociais no qual faço parte e uso com frequência."
+    />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/img/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/img/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/img/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./assets/img/favicons/site.webmanifest" />
+    <link rel="canonical" href="/" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <title>Meus links | Niag Alves</title>
   </head>
   <body>
     <main>
@@ -14,7 +61,7 @@
         <img src="./assets/img/profile/profile.jpg" alt="Niag Alves" />
         <h1>@niagalves</h1>
         <p>
-          Aqui você irá encontrar o link de todas as redes sociais no qual faço
+          Aqui você encontrará links de todas as redes sociais no qual faço
           parte e uso com frequência.
         </p>
       </header>
