--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:site_name" content="Meus links | Niag Alves" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="./assets/img/metatag/metatag.png" />
+    <meta property="og:image" content="/assets/img/metatag/background.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="765" />
     <meta property="og:image:height" content="406" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:image" content="./assets/img/metatag/metatag.png" />
+    <meta name="twitter:image" content="/assets/img/metatag/background.png" />
     <meta name="twitter:site" content="@niagalves" />
     <meta name="twitter:title" content="Meus links | Niag Alves" />
     <meta
@@ -36,23 +36,23 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./assets/img/favicons/apple-touch-icon.png"
+      href="/assets/img/favicons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/img/favicons/favicon-32x32.png"
+      href="/assets/img/favicons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./assets/img/favicons/favicon-16x16.png"
+      href="/assets/img/favicons/favicon-16x16.png"
     />
-    <link rel="manifest" href="./assets/img/favicons/site.webmanifest" />
+    <link rel="manifest" href="/assets/img/favicons/site.webmanifest" />
     <link rel="canonical" href="/" />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
     <title>Meus links | Niag Alves</title>
   </head>
   <body>
